--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 
 <head>
+  <link rel="stylesheet" href="style/style.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,7 +16,7 @@
   </head>
   <main>
     <div class="aboba_test">
-      <p>OVERDRIVE HAMMON</p>
+      <p>OVERDRIVE HAMON</p>
     </div>
   </main>
   <footer>
